integrate Gemini API and implement RAG chat pipeline